--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ header {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: url('/images/background.png');
+    background: url('images/background.png');
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
